// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createOne FILES field metadata - failing should fail to create files field with isUnique = true 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Files field is not supported for unique fields",
              "userFriendlyMessage": "Files field is not supported for unique fields",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "filesFieldUnique",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_UNIQUE_47bf8eae9471bbd64cbb794a3b6",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 1 index",
    "summary": {
      "fieldMetadata": 1,
      "index": 1,
      "totalErrors": 2,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`createOne FILES field metadata - failing should fail to create files field with maxNumberOfValues = 0 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "maxNumberOfValues must be defined in settings and be a number greater than 0 and less than or equal to 10",
              "userFriendlyMessage": "maxNumberOfValues must be defined in settings and be a number greater than 0 and less than or equal to 10",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "filesFieldInvalid",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`createOne FILES field metadata - failing should fail to create files field with maxNumberOfValues = 11 (exceeds max) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "maxNumberOfValues must be defined in settings and be a number greater than 0 and less than or equal to 10",
              "userFriendlyMessage": "maxNumberOfValues must be defined in settings and be a number greater than 0 and less than or equal to 10",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "filesFieldExceeds",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`createOne FILES field metadata - failing should fail to create files field without settings 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "maxNumberOfValues must be defined in settings and be a number greater than 0 and less than or equal to 10",
              "userFriendlyMessage": "maxNumberOfValues must be defined in settings and be a number greater than 0 and less than or equal to 10",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "filesFieldNoSettings",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;
